fix rendering bugs in safari for a better UX * Add `pulse` and `pulse-container` CSS classes for better icon pulse on home page * Apply the `pulse` class to elements you wish to use the pulse animation on and `pulse-container` on the ancestor element which will trigger the pulse when the user hovers over it * fix text issues on Safari during hover CSS animation using GPU http://stackoverflow.com/questions/7947385/hovering-over-css-transition-in-safari-lightens-certain-font-color

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -6,27 +6,26 @@
 
 @-webkit-keyframes pulse{
   0%, 100% {
-    -webkit-transform: scale(0.77);
+    -webkit-transform: scale3d(0.77, 0.77, 1);
   }
 
   50% {
-    -webkit-transform: scale(1);
+    -webkit-transform: scale3d(1, 1, 1);
   }
 }
 
 @keyframes pulse{
   0%, 100% {
-    transform: scale(0.77);
+    transform: scale3d(0.77, 0.77, 1);
   }
 
   50% {
-    transform: scale(1);
+    transform: scale3d(1, 1, 1);
   }
 }
 
 @media (min-width: 768px){
-  .panel:hover i.fa{
-
+  .pulse-container:hover .pulse{
     -webkit-animation-duration: 1s;
        -moz-animation-duration: 1s;
         -ms-animation-duration: 1s;
@@ -42,11 +41,14 @@
          -o-animation-name: pulse;
             animation-name: pulse;
   }
-
-  .panel i.fa {
+  .pulse {
     font-size: 6.5em;
-    -webkit-transform: scale(0.77);
-    transform: scale(0.77);
+    -webkit-transform: scale3d(0.77, 0.77, 1);
+    transform: scale3d(0.77, 0.77, 1);
+  }
+  
+  body {
+    -webkit-transform: translateZ(0);
   }
 
 }
